# data-engineering-prep

./: .gitignore  .pre-commit-config.yaml  README.md
SQL PROBLEM SOLVING/: day06.sql  day08.sql  day09.sql  day10.sql  day11.sql  day12.sql  day13.sql  learninglog.md
SQL PROBLEM SOLVING/analytics_project/: brazilian_ecommerce_10_queries.sql
bash - file/: one_liners.sh
python-data-practice/: Array_Hashmaps_String.py  DAY20.PY  OOP_pipeline.py  data_cleaning.py  day08.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  end_to_end_pipeline.py  nyc_taxi_eda.py  pandas_groupby_merge_pivot.py  polars_intro.py  pyproject.toml  ruff.toml
python-data-practice/testing/: exceptions.py  logging_config.py  test_pipeline.py
week1/: day07.sql
