[project]
name = "python-data-practice"
version = "0.1.0"
description = "Data Engineering Python Practice"
authors = [
    {name = "DhruvPatel1704",email = "dp749175@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
